--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "funbox-task",
-  "version": "0.1.0",
+  "homepage": "/funbox-task",
+  "author": "Anufriy Efremov",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
@@ -11,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scss": "node-sass --watch public/scss -o public/css"
   },
   "eslintConfig": {
     "extends": "react-app"
